fixed too high margin

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -154,7 +154,7 @@ label {
 }
 
 #content {
-    margin: 15px;
+    margin: 0px 15px;
     padding: 15px;
     margin-bottom: 0px;
     background-color: #fff;
